--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <center>
     <h1>Form Mahasiswa</h1>
-    <form action="proses.php" method="POST">
+    <form>
       <label for="nama">Nama:</label>
       <input type="text" id="nama" name="nama" required /><br /><br />
 
